--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -25,6 +25,41 @@
   cursor: pointer;
 }
 
+.header {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.emptyCorner {
+  width: 3rem;
+}
+
+.columnNumbers {
+  display: flex;
+  flex-direction: column;
+  width: 3rem;
+  align-items: center;
+  justify-content: end;
+}
+
+.rowNumbers {
+  display: flex;
+  width: 3rem;
+  justify-content: end;
+  align-items: center;
+  margin-right: 0.5rem;
+}
+
+.number {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  width: 1rem;
+  height: 1.5rem;
+}
+
 .toggleButton {
   width: 6rem;
   height: 3rem;
