--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -69,6 +69,14 @@
   margin-bottom: 1rem;
 }
 
+.lives {
+  display: flex;
+  height: 5rem;
+  width: 8rem;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .emptyCorner {
   width: 3rem;
 }
