--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -81,6 +81,19 @@
   border-bottom: 2px solid white;
 }
 
+@keyframes flash {
+  0% {
+    background-color: yellow;
+  }
+  100% {
+    background-color: transparent;
+  }
+}
+
+.flash {
+  animation: flash 0.5s linear;
+}
+
 .header {
   display: flex;
   justify-content: center;
