--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,6 +6,10 @@
   align-items: center;
 }
 
+.levelSelector {
+  margin-bottom: 20px;
+}
+
 .grid {
   display: flex;
   flex-direction: column;
@@ -138,7 +142,7 @@
 }
 
 .emptyCorner {
-  width: 3rem;
+  width: 5rem;
 }
 
 .columnNumbers {
@@ -151,7 +155,7 @@
 
 .rowNumbers {
   display: flex;
-  width: 3rem;
+  width: 5rem;
   justify-content: end;
   align-items: center;
   margin-right: 0.5rem;
@@ -162,7 +166,7 @@
   align-items: center;
   justify-content: center;
   font-size: 1rem;
-  width: 1rem;
+  width: 1.5rem;
   height: 1.5rem;
 }
 
