--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -20,14 +20,32 @@
 }
 
 .cell {
-  width: 3rem;
-  height: 3rem;
   border: 1px solid grey;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   position: relative;
+}
+
+.cell-5 {
+  width: 4rem;
+  height: 4rem;
+}
+
+.cell-10 {
+  width: 3rem;
+  height: 3rem;
+}
+
+.cell-15 {
+  width: 2rem;
+  height: 2rem;
+}
+
+.cell-20 {
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 .cell.filled {
@@ -100,7 +118,6 @@
 
 .header {
   display: flex;
-  justify-content: center;
   margin-bottom: 1rem;
 }
 
@@ -142,15 +159,30 @@
 }
 
 .emptyCorner {
-  width: 5rem;
+  width: 6rem;
 }
 
 .columnNumbers {
   display: flex;
   flex-direction: column;
-  width: 3rem;
   align-items: center;
   justify-content: end;
+}
+
+.columnNumbers-5 {
+  width: 4rem;
+}
+
+.columnNumbers-10 {
+  width: 3rem;
+}
+
+.columnNumbers-15 {
+  width: 2rem;
+}
+
+.columnNumbers-20 {
+  width: 1.5rem;
 }
 
 .rowNumbers {
@@ -158,16 +190,31 @@
   width: 5rem;
   justify-content: end;
   align-items: center;
-  margin-right: 0.5rem;
+  margin-right: 1rem;
+
+  .number {
+    margin-left: 0.5rem;
+  }
 }
 
 .number {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1rem;
-  width: 1.5rem;
   height: 1.5rem;
+}
+
+.number-5,
+.number-10 {
+  font-size: 1rem;
+}
+
+.number-15 {
+  font-size: 0.9rem;
+}
+
+.number-20 {
+  font-size: 0.8rem;
 }
 
 .toggleButton {
@@ -208,4 +255,95 @@
 
 .toggleSwitch.fill {
   transform: translateX(3rem);
+}
+
+/* Responsive styles */
+@media (max-width: 600px) {
+  .header {
+    margin-bottom: 0.3rem;
+  }
+
+  .emptyCorner {
+    width: 2.5rem;
+  }
+
+  .columnNumbers {
+    width: 2rem;
+  }
+
+  .rowNumbers {
+    width: 2rem;
+    margin-right: 0.5rem;
+  }
+
+  .cell-5 {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .cell-10 {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .cell-15 {
+    width: 1.2rem;
+    height: 1.2rem;
+  }
+
+  .cell-20 {
+    width: 1rem;
+    height: 1rem;
+  }
+
+  .columnNumbers-5 {
+    width: 3rem;
+  }
+
+  .columnNumbers-10 {
+    width: 2rem;
+  }
+
+  .columnNumbers-15 {
+    width: 1.2rem;
+  }
+
+  .columnNumbers-20 {
+    width: 1rem;
+  }
+
+  .number {
+    height: 1rem;
+  }
+
+  .number-5,
+  .number-10 {
+    font-size: 0.8rem;
+  }
+
+  .number-15,
+  .number-20 {
+    font-size: 0.7rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .cell-10 {
+    width: 1.7rem;
+    height: 1.7rem;
+  }
+
+  .columnNumbers-10 {
+    width: 1.7rem;
+  }
+
+  .number-5,
+  .number-10,
+  .number-15 {
+    font-size: 0.7rem;
+  }
+
+  .number-20 {
+    font-size: 0.6rem;
+  }
 }
