--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -10,6 +10,10 @@
   margin-bottom: 20px;
 }
 
+.gridWrapper {
+  display: flex;
+}
+
 .grid {
   display: flex;
   flex-direction: column;
@@ -118,6 +122,7 @@
 
 .header {
   display: flex;
+  justify-content: end;
   margin-bottom: 1rem;
 }
 
@@ -158,15 +163,10 @@
   }
 }
 
-.emptyCorner {
-  width: 6rem;
-}
-
 .columnNumbers {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: end;
 }
 
 .columnNumbers-5 {
@@ -185,16 +185,48 @@
   width: 1.5rem;
 }
 
+.numsWrapper {
+  background-color: #9a9a9a;
+  border-radius: 0.2rem;
+  display: flex;
+
+  align-items: center;
+  justify-content: end;
+}
+
+.colNumsWrapper {
+  flex-direction: column;
+  width: 90%;
+  height: 100%;
+}
+
 .rowNumbers {
   display: flex;
-  width: 5rem;
-  justify-content: end;
   align-items: center;
   margin-right: 1rem;
 
   .number {
     margin-left: 0.5rem;
   }
+}
+
+.rowNumbers-5 {
+  height: 4rem;
+}
+.rowNumbers-10 {
+  height: 3rem;
+}
+.rowNumbers-15 {
+  height: 2rem;
+}
+.rowNumbers-20 {
+  height: 1.5rem;
+}
+
+.rowNumsWrapper {
+  width: 100%;
+  height: 90%;
+  padding-right: 0.5rem;
 }
 
 .number {
@@ -272,7 +304,6 @@
   }
 
   .rowNumbers {
-    width: 2rem;
     margin-right: 0.5rem;
   }
 
@@ -280,17 +311,14 @@
     width: 3rem;
     height: 3rem;
   }
-
   .cell-10 {
     width: 2rem;
     height: 2rem;
   }
-
   .cell-15 {
     width: 1.2rem;
     height: 1.2rem;
   }
-
   .cell-20 {
     width: 1rem;
     height: 1rem;
@@ -299,17 +327,27 @@
   .columnNumbers-5 {
     width: 3rem;
   }
-
   .columnNumbers-10 {
     width: 2rem;
   }
-
   .columnNumbers-15 {
     width: 1.2rem;
   }
-
   .columnNumbers-20 {
     width: 1rem;
+  }
+
+  .rowNumbers-5 {
+    height: 3rem;
+  }
+  .rowNumbers-10 {
+    height: 2rem;
+  }
+  .rowNumbers-15 {
+    height: 1.2rem;
+  }
+  .rowNumbers-20 {
+    height: 1rem;
   }
 
   .number {
@@ -320,10 +358,15 @@
   .number-10 {
     font-size: 0.8rem;
   }
-
   .number-15,
   .number-20 {
     font-size: 0.7rem;
+  }
+
+  .rowNumbers {
+    .number {
+      margin-left: 0.3rem;
+    }
   }
 }
 
@@ -337,6 +380,10 @@
     width: 1.7rem;
   }
 
+  .rowNumbers-10 {
+    height: 1.7rem;
+  }
+
   .number-5,
   .number-10,
   .number-15 {
@@ -345,5 +392,11 @@
 
   .number-20 {
     font-size: 0.6rem;
+  }
+
+  .rowNumbers {
+    .number {
+      margin-left: 0.2rem;
+    }
   }
 }
