--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -123,7 +123,7 @@
 .header {
   display: flex;
   justify-content: end;
-  margin-bottom: 1rem;
+  margin-bottom: 0.7rem;
 }
 
 .lives {
@@ -208,24 +208,32 @@
 .rowNumbers {
   display: flex;
   align-items: center;
-  margin-right: 1rem;
-
-  .number {
-    margin-left: 0.5rem;
-  }
+  margin-right: 0.7rem;
 }
 
 .rowNumbers-5 {
   height: 4rem;
+  .number {
+    margin-left: 1rem;
+  }
 }
 .rowNumbers-10 {
   height: 3rem;
+  .number {
+    margin-left: 0.8rem;
+  }
 }
 .rowNumbers-15 {
   height: 2rem;
+  .number {
+    margin-left: 0.5rem;
+  }
 }
 .rowNumbers-20 {
   height: 1.5rem;
+  .number {
+    margin-left: 0.3rem;
+  }
 }
 
 .rowNumsWrapper {
@@ -238,20 +246,26 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 1.5rem;
 }
 
-.number-5,
+.number-5 {
+  font-size: 1rem;
+  height: 2rem;
+}
+
 .number-10 {
   font-size: 1rem;
+  height: 1.8rem;
 }
 
 .number-15 {
   font-size: 0.9rem;
+  height: 1.3rem;
 }
 
 .number-20 {
   font-size: 0.8rem;
+  height: 1.1rem;
 }
 
 .toggleButton {
@@ -297,7 +311,7 @@
 /* Responsive styles */
 @media (max-width: 600px) {
   .header {
-    margin-bottom: 0.3rem;
+    margin-bottom: 0.2rem;
   }
 
   .emptyCorner {
@@ -309,7 +323,7 @@
   }
 
   .rowNumbers {
-    margin-right: 0.5rem;
+    margin-right: 0.2rem;
   }
 
   .cell-5 {
@@ -344,34 +358,44 @@
 
   .rowNumbers-5 {
     height: 3rem;
+    .number {
+      margin-left: 0.7rem;
+    }
   }
   .rowNumbers-10 {
     height: 2rem;
+    .number {
+      margin-left: 0.4rem;
+    }
   }
   .rowNumbers-15 {
     height: 1.2rem;
-  }
-  .rowNumbers-20 {
-    height: 1rem;
-  }
-
-  .number {
-    height: 1rem;
-  }
-
-  .number-5,
-  .number-10 {
-    font-size: 0.8rem;
-  }
-  .number-15,
-  .number-20 {
-    font-size: 0.7rem;
-  }
-
-  .rowNumbers {
     .number {
       margin-left: 0.3rem;
     }
+  }
+  .rowNumbers-20 {
+    height: 1rem;
+    .number {
+      margin-left: 0.2rem;
+    }
+  }
+
+  .number-5 {
+    font-size: 0.8rem;
+    height: 1.5rem;
+  }
+  .number-10 {
+    font-size: 0.8rem;
+    height: 1.2rem;
+  }
+  .number-15 {
+    font-size: 0.7rem;
+    height: 0.9rem;
+  }
+  .number-20 {
+    font-size: 0.7rem;
+    height: 0.8rem;
   }
 }
 
@@ -380,13 +404,23 @@
     width: 1.7rem;
     height: 1.7rem;
   }
+  .cell-20 {
+    width: 0.9rem;
+    height: 0.9rem;
+  }
 
   .columnNumbers-10 {
     width: 1.7rem;
   }
+  .columnNumbers-20 {
+    width: 0.9rem;
+  }
 
   .rowNumbers-10 {
     height: 1.7rem;
+  }
+  .rowNumbers-20 {
+    height: 0.9rem;
   }
 
   .number-5,
@@ -397,11 +431,5 @@
 
   .number-20 {
     font-size: 0.6rem;
-  }
-
-  .rowNumbers {
-    .number {
-      margin-left: 0.2rem;
-    }
   }
 }
