--- a/src/components/LevelSelector.module.css
+++ b/src/components/LevelSelector.module.css
@@ -1,10 +1,12 @@
 .levelSelector {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-bottom: 1rem;
 }
 
 .levelButton {
+  width: 5rem;
   background-color: var(--shade-color);
   border: none;
   padding: 0.5rem 1rem;
@@ -14,6 +16,11 @@
 }
 
 .levelButton.selected {
-  background-color: var(--primary-color);
+  background-color: var(--dark-color);
   color: white;
+}
+
+.label {
+  font-weight: bold;
+  margin-bottom: 0.3rem;
 }
