--- a/src/components/Grid.module.css
+++ b/src/components/Grid.module.css
@@ -164,27 +164,27 @@
 
 .rowNumbers-5 {
   height: 4rem;
-  .number {
-    margin-left: 1rem;
-  }
+}
+.rowNumbers-5 .number {
+  margin-left: 1rem;
 }
 .rowNumbers-10 {
   height: 3rem;
-  .number {
-    margin-left: 0.8rem;
-  }
+}
+.rowNumbers-10 .number {
+  margin-left: 0.8rem;
 }
 .rowNumbers-15 {
   height: 2rem;
-  .number {
-    margin-left: 0.5rem;
-  }
+}
+.rowNumbers-15 .number {
+  margin-left: 0.5rem;
 }
 .rowNumbers-20 {
   height: 1.5rem;
-  .number {
-    margin-left: 0.3rem;
-  }
+}
+.rowNumbers-20 .number {
+  margin-left: 0.3rem;
 }
 
 .rowNumsWrapper {
@@ -265,27 +265,27 @@
 
   .rowNumbers-5 {
     height: 3rem;
-    .number {
-      margin-left: 0.7rem;
-    }
+  }
+  .rowNumbers-5 .number {
+    margin-left: 0.7rem;
   }
   .rowNumbers-10 {
     height: 2rem;
-    .number {
-      margin-left: 0.4rem;
-    }
+  }
+  .rowNumbers-10 .number {
+    margin-left: 0.4rem;
   }
   .rowNumbers-15 {
     height: 1.2rem;
-    .number {
-      margin-left: 0.3rem;
-    }
+  }
+  .rowNumbers-15 .number {
+    margin-left: 0.3rem;
   }
   .rowNumbers-20 {
     height: 1rem;
-    .number {
-      margin-left: 0.2rem;
-    }
+  }
+  .rowNumbers-20 .number {
+    margin-left: 0.2rem;
   }
 
   .number-5 {
@@ -307,36 +307,65 @@
 }
 
 @media (max-width: 400px) {
+  .rowNumsWrapper {
+    padding-right: 0.2rem;
+  }
+
   .cell-10 {
-    width: 1.7rem;
-    height: 1.7rem;
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  .cell-15 {
+    width: 1rem;
+    height: 1rem;
   }
   .cell-20 {
-    width: 0.9rem;
-    height: 0.9rem;
+    width: 0.8rem;
+    height: 0.8rem;
   }
 
   .columnNumbers-10 {
-    width: 1.7rem;
+    width: 1.5rem;
+  }
+  .columnNumbers-15 {
+    width: 1rem;
   }
   .columnNumbers-20 {
-    width: 0.9rem;
+    width: 0.8rem;
   }
 
   .rowNumbers-10 {
-    height: 1.7rem;
+    height: 1.5rem;
+  }
+  .rowNumbers-10 .number {
+    margin-left: 0.3rem;
+  }
+  .rowNumbers-15 {
+    height: 1rem;
+  }
+  .rowNumbers-15 .number {
+    margin-left: 0.2rem;
   }
   .rowNumbers-20 {
-    height: 0.9rem;
+    height: 0.8rem;
+  }
+  .rowNumbers-20 .number {
+    margin-left: 0.1rem;
   }
 
-  .number-5,
-  .number-10,
-  .number-15 {
+  .number-5 {
+    height: 1.3rem;
+  }
+  .number-10 {
     font-size: 0.7rem;
+    height: 1rem;
   }
-
-  .number-20 {
+  .number-15 {
     font-size: 0.6rem;
+    height: 0.8rem;
+  }
+  .number-20 {
+    font-size: 0.5rem;
+    height: 0.7rem;
   }
 }
