--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  max-height: 100vh;
+  overflow: hidden;
   background-color: var(--background-color);
 }
