--- a/src/components/LevelSelector.module.css
+++ b/src/components/LevelSelector.module.css
@@ -1,37 +1,52 @@
 .levelSelector {
+  background-color: white;
+  padding: 1rem;
+  border-radius: 1rem;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  margin-bottom: 1rem;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  border: 8px solid var(--logo-color);
 }
 
 .levelButton {
-  width: 5rem;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   background-color: var(--shade-color);
   border: none;
-  padding: 0.5rem 1rem;
-  margin: 0 0.2rem;
+  padding: 0.7rem 1rem;
+  margin-bottom: 1rem;
   cursor: pointer;
-  border-radius: 0.3rem;
-}
-
-.levelButton.selected {
-  background-color: var(--dark-color);
-  color: white;
+  border-radius: 0.5rem;
+  width: 100%;
+  text-align: left;
+  color: var(--dark-color);
 }
 
 .label {
   font-weight: bold;
-  margin-bottom: 0.3rem;
+  margin-right: 2rem;
 }
 
-@media (max-width: 400px) {
-  .levelSelector {
-    margin-bottom: 0.5rem;
-  }
+.value {
+  font-size: 0.9rem;
+  color: var(--dark-gray);
+}
 
-  .levelButton {
-    width: 4rem;
-    padding: 0.5rem 0.5rem;
-  }
+.cancelButton {
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  background-color: var(--light-gray);
+  border: none;
+  padding: 0.7rem 1rem;
+  cursor: pointer;
+  border-radius: 0.5rem;
+  width: 100%;
+  font-weight: bold;
 }
