--- a/src/components/Grid/Grid.module.css
+++ b/src/components/Grid/Grid.module.css
@@ -97,6 +97,19 @@
   transform: rotate(-45deg);
 }
 
+@keyframes flash {
+  0% {
+    background-color: var(--light-color);
+  }
+  100% {
+    background-color: transparent;
+  }
+}
+
+.flash {
+  animation: flash 0.5s linear;
+}
+
 .header {
   display: flex;
   justify-content: end;
