design: change grid color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 :root {
   --background-color: #ffe5e5;
   --shade-color: #d8c6d2;
-  --light-color: #d14729;
+  --light-color: #9d026b;
   --dark-color: #600042;
   --light-gray: #c3c3c3;
   --logo-color: #f29b80;
