--- a/src/components/Grid/Grid.module.css
+++ b/src/components/Grid/Grid.module.css
@@ -59,7 +59,7 @@
 }
 
 .cell.filled {
-  background-color: var(--logo-color);
+  background-color: var(--dark-color);
 }
 
 .cellError {
@@ -86,7 +86,7 @@
   position: absolute;
   width: 80%;
   height: 2px;
-  background-color: var(--logo-color);
+  background-color: var(--dark-color);
 }
 
 .cell.crossed::before {
