--- a/src/components/LevelSelector/LevelSelector.module.css
+++ b/src/components/LevelSelector/LevelSelector.module.css
@@ -1,3 +1,28 @@
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2000;
+}
+
+.modalContent {
+  background: white;
+  padding: 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  position: relative;
+  z-index: 2001;
+  /* max-width: 500px; */
+  width: 90%;
+  text-align: center;
+}
+
 .levelSelector {
   background-color: white;
   padding: 1rem;
